[package]
name = "gtk-todo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.6.1"
cascade = "1.0.0"
fomat-macros = "0.3.1"
gio = "0.14.6"
glib = "0.14.5"
gtk = "0.14.1"
slotmap = "1.0.6"
xdg = "2.2.0"
